# service-extractor-notebookum

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py
app/routes/: __init__.py  extraction_queries.py  extractions.py  strangler.py
app/services/: __init__.py  audit_service.py  circuit_breaker.py  job_service.py  pdf_service.py  rate_limit_service.py
app/utils/: __init__.py  consul.py  errors.py
tests/: test_extraction_api.py  test_pdf_service.py  test_strangler_contract.py
